1:1 video chat with signaling server in aws

--- a/WebRTC/index.html
+++ b/WebRTC/index.html
@@ -19,6 +19,6 @@
       <text id="sessionID"> call first </text>
     </div>
   </body>
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
   <script src="main.js"></script>
 </html>
