add mute and hangUp button

--- a/WebRTC/index.html
+++ b/WebRTC/index.html
@@ -15,6 +15,7 @@
       <button id="startButton">start</button>
       <button id="callButton">call</button>
       <button id="hangupButton">hangup</button>
+      <button id="muteVideoButton">Mute</button>
       <b> Your session ID = </b>
       <text id="sessionID"> call first </text>
     </div>
