--- a/hold/index2.html
+++ b/hold/index2.html
@@ -35,5 +35,5 @@
     </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
-  <script src="main.js" async></script>
+  <script src="main2.js" async></script>
 </html>
