--- a/WebRTC/index.html
+++ b/WebRTC/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="videos">
       <video id="localVideo" autoplay muted playsinline></video>
-      <video id="remoteVideo" autoplay playsinline></video>
+      <!-- <video id="remoteVideo" autoplay playsinline></video> -->
     </div>
     <div>
       <button id="startButton">start</button>
